--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
+    "caniuse-lite": "^1.0.30001737",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -71,5 +72,8 @@
     "vaul": "^0.9.9",
     "zod": "^4.0.17",
     "zustand": "^5.0.8"
+  },
+  "devDependencies": {
+    "critters": "^0.0.23"
   }
 }
