--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "^15.5.0",
     "next-themes": "^0.3.0",
     "postcss": "8.4.31",
+    "qr-code-styling": "^1.9.2",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
@@ -70,6 +71,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.9",
     "zod": "^4.0.17",
     "zustand": "^5.0.8"
